--- a/week1/tmap_intro.qmd
+++ b/week1/tmap_intro.qmd
@@ -87,7 +87,9 @@ In `tmap`, the spatial object to plot needs to be defined within the function `t
 
 Let's start by plotting the countries of the world.
 ```{r}
-
+# Plotting a single spacial object
+tm_shape(world_vector) + # Defines spatial object to plot
+  tm_polygons() # Defines how to plot the object
 
 ```
 
@@ -103,7 +105,11 @@ Now let's plot the following two spatial objects:
 In the next section we'll unpack the difference between `tm_polygons()` and `tm_dots()`, but for now let's just pay attention to the syntax of how we plot multiple spatial objects. Each spatial object needs to be specified using `tm_shape()` followed by a function for how to plot it. 
 
 ```{r}
-
+# Plotting a single spacial object
+tm_shape(world_vector) + # Defines spatial object to plot
+  tm_polygons() + # Defines how to plot the object
+tm_shape(world_cities) + # Defines the second object to plot
+  tm_dots() # Defines how to plot these 
 ```
 
 So far, we've only tried plotting *vector* data (more on what this means next week!), but one of the major advantages of `tmap` is that it allows us to plot *vector* and *raster* on the same map.
@@ -111,7 +117,14 @@ So far, we've only tried plotting *vector* data (more on what this means next we
 Let's try on example of this by adding information on global elevations to our previous map.
 
 ```{r}
-
+# Plotting vector and raster spatial objects
+tm_shape(world_elevation) + # Plotting global elevations 
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders() + # Don't fill in because this is already done by raster data
+  tm_shape(world_cities) +
+  tm_dots() +
+  tm_text("name", size = 0.7, col = "grey5")
 ```
 
 Similar to `ggplot2` the order of the "layers" matters! The order in which datasets are plotted defines how they are layered (think of this is as adding layers of paint). Spatial objects have extra features which additionally change this behavior: spatial extent and projection. When creating maps with `tmap`, whichever dataset is used in the first `tm_shape()` call sets the spatial extent and projection (more details next week!) for the entire map.
@@ -119,18 +132,30 @@ Similar to `ggplot2` the order of the "layers" matters! The order in which datas
 For example, if we swapped the order of `tm_shape()` calls in the previous example, we'd end up with a different map.
 
 ```{r}
-
+tm_shape(world_cities) + # Data associated with this is what will be used as the spatial extent, which is why this plot is so zoomed in
+  tm_dots() +
+  tm_text("name") +
+  tm_shape(world_elevation) +
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders()
 
 ```
 
 Sometimes this can present sticky issues! Imagine the case where we want to use the spatial extent and projection from the `world_cities` data, but want it plotted on top of the other datasets. We can do this by changing the main *shape* using the `is.main` argument.
 
 ```{r}
-
-
+tm_shape(world_elevation) +
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders() +
+  tm_shape(world_cities, is.main = TRUE) + # Plotting cities last but set as main shape
+  tm_dots() +
+  tm_text("name")
+# Q: is the utility in this that the layers are still in the correct order but the extent is customizable?
 ```
 
-### Map extent
+### Map extent- Spatial Extent
 
 One thing to consider when making maps is what area we want to show on the map -- the spatial extent of our map. This isn't an issue when we want to map all of our data (spatial extent of our data matches our desired map extent). But often our data will represent a larger region than what we want to map.
 
@@ -144,13 +169,21 @@ We have two options:
 For example, let's restrict our previous map to just Europe using a set of min/max values.
 
 ```{r}
+# Creating a bounding box
+tm_shape(world_elevation, bbox = c(-15, 35, 45, 65)) + # CRS is in lat, lon x min, y min, x max, y max
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders()
 
 ```
 
 We can also restrict the extent of the map using the extent of a dataset. For example, we can restrict the map using the extent of the `world_cities` data.
 
 ```{r}
-
+tm_shape(world_elevation, bbox = world_cities) +
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders()
 
 ```
 
@@ -160,8 +193,10 @@ We can also restrict the extent of the map using the extent of a dataset. For ex
 You can also restrict the map extent using an OpenStreetMap tool called Nominatim to automatically generate minimum and maximum coordinates in the x and y directions based on the provided query.
 
 ```{r}
-
-
+tm_shape(world_elevation, bbox = "Europe") + # Europe is predefined as a spatial extent within tmap
+  tm_raster() +
+  tm_shape(world_vector) +
+  tm_borders()
 
 ```
 
@@ -217,14 +252,13 @@ The main function to visualize polygons is `tm_polygons()`. By default, it plots
 ```{r}
 
 tm_shape(world_vector) +
-  tm_polygons()
+  tm_polygons(fill = "green", col = "pink", lwd = 10)
 
 ```
 
-We modify the colors useing the `col` and `border.col` arguments and other arguments borrowed from `ggplot2`.
+We modify the colors using the `col` and `border.col` arguments and other arguments borrowed from `ggplot2`.
 
 ```{r}
-
 
 ```
 
@@ -233,16 +267,21 @@ But, you may have noticed in the previous table that `tm_polygons` isn't the onl
 The `tm_borders()` function plots just the borders and the `tm_fill()` function fills polygons with a fixed color or a color palette representing a selected variable. 
 
 ```{r}
+tm_shape(world_vector) +
+  tm_borders(col = "red")
 
 ```
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_fill(fill = "red")
 
 ```
 
 ```{r}
-
+# Fill polygon with a color palette representing a variable
+tm_shape(world_vector) +
+  tm_fill("CO2_emissions")
 ```
 
 ::: {.callout-warning icon=true}
@@ -259,7 +298,11 @@ Symbols are a very flexible layer type. They typically represent point data, but
 `tm_symbols()` is the main function in `tmap` to display and modify symbol elements. By default, this function draws a gray circle symbol with a black border for each element of an input feature.
 
 ```{r}
+tm_shape(world_cities) +
+  tm_symbols(shape =22) # This is a square I guess
 
+tm_shape(world_cities) +
+  tm_dots() # Smaller circles
 ```
 
 `tm_symbols()` has a large number of arguments to flexibly adjust how elements are displayed. While this allows adjusting its results to almost any need, it also makes this function complicated. Therefore, four additional layers are implemented in `tmap`: `tm_squares()`, `tm_bubbles()`, `tm_dots()`, `tm_markers()`. All of them use `tm_symbols()`, but with different default values.
@@ -314,7 +357,11 @@ Just like updating axis labels, we always need to update legend titles. In `tmap
 :::
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_polygons(fill = 'life_expectancy',
+              fill.scale = tm_scale(values = c("orange", "blue")), 
+              fill.legend = tm_legend(title = "Life Expectancy (years)", position = tm_pos_out("left"))) 
+  
 
 ```
 
@@ -327,14 +374,22 @@ Another approach is to provide the output of a palette function. When using a pa
 #install.packages("viridisLite")
 library(viridisLite)
 
-
-
+tm_shape(world_vector) +
+  tm_polygons(fill = 'life_expectancy',
+              fill.scale = tm_scale(values = viridis(8)), 
+              fill.legend = tm_legend(title = "Life Expectancy (years)", position = tm_pos_out("left"))) 
 ```
 
 Finally, the last approach is to use the name of one of the built-in color palettes.
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_polygons(fill = 'life_expectancy',
+              # fill.scale = tm_scale(values = "brewer.yl_gn"),
+              # fill.scale = tm_scale(values = "brewer.ylOrBr"), 
+              # fill.scale = tm_scale(values = "Pastel1"),
+              fill.scale = tm_scale(values = "Accent"),
+              fill.legend = tm_legend(title = "Life Expectancy (years)", position = tm_pos_out("left"))) 
 ```
 
 ### Size
@@ -342,7 +397,13 @@ Finally, the last approach is to use the name of one of the built-in color palet
 Sizes can be used for points, lines (line widths), or text to represent quantitative (numerical) variables. By default, `tmap` represents points, lines, or text objects as the same size. The size of objects can be changed by using the `size` argument.
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_polygons(fill = 'lightblue') +
+  tm_shape(world_cities) +
+  tm_symbols(
+    size = "pop2020", #size is according to the population in 2020,
+    size.legend = tm_legend(orientation = "portrait")
+  )
 
 ```
 
@@ -384,19 +445,27 @@ The `tmap` package offers two ways to draw coordinate lines - `tm_grid()` and `t
 
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_fill() +
+  tm_grid()
 ```
 
 `tm_graticules()` shows latitude and longitude lines, with degrees as units
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_fill() +
+  tm_graticules()
 ```
 
 Both `tm_grid()` and `tm_graticules()` can be placed above or below other map layers.
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_fill() +
+  tm_scalebar() +
+  tm_compass(north = 0, # You can change the orientation of the compass if say you weren't making a colonialist map
+             position = c("left", "top"))
 ```
 
 ### Scale bar and north arrow
@@ -413,7 +482,14 @@ A scale bar is a graphic indicator of the relation between a distance on a map a
 Similar to the `theme()` function in `ggplot2`, the `tm_layout()` function in `tmap` controls many of the map elements of the map layout.
 
 ```{r}
-
+tm_shape(world_vector) +
+  tm_polygons(fill = "wb_income_region", 
+              fill.legend = tm_legend(title = "Regional Income")) +
+  tm_title(text = " Global income", 
+           frame = TRUE) +
+  tm_layout(text.fontfamily = "Montserrat", 
+            style = "beaver", 
+            bg.color = "pink")
 ```
 
 
