--- a/week1/tmap_intro.qmd
+++ b/week1/tmap_intro.qmd
@@ -483,13 +483,20 @@ Similar to the `theme()` function in `ggplot2`, the `tm_layout()` function in `t
 
 ```{r}
 tm_shape(world_vector) +
-  tm_polygons(fill = "wb_income_region", 
+  tm_polygons(#fill = "wb_income_region", 
+              fill = 'gdp_per_cap', 
+              #fill.scale = tm_scale(breaks = c(0, 500, 1000, 2000, 4000, 8000)), 
+              fill.scale = tm_scale(breaks = c(0, 5000, 20000, 50000, Inf), 
+                                    labels = c("Low", "Medium", "High", "Very High")), 
               fill.legend = tm_legend(title = "Regional Income")) +
   tm_title(text = " Global income", 
            frame = TRUE) +
   tm_layout(text.fontfamily = "Montserrat", 
             style = "beaver", 
-            bg.color = "pink")
+            bg.color = "steelblue", 
+            frame.double_line = TRUE, 
+            )
+            #panel.show = TRUE)
 ```
 
 
@@ -499,7 +506,14 @@ tm_shape(world_vector) +
 One of the most powerful aspects of `tmap` is the ease of creating interactive maps. `tmap` has two modes `"plot"` which creates static maps and `"view"` which creates interactive maps that can be easily embedded in quarto docs. It's as easy as using the `tmap_mode()`!
 
 ```{r}
+tmap_mode("view")
 
+```
+
+```{r}
+tm_shape(world_vector) +
+  tm_polygons(fill = "gdp_per_cap", 
+              fill.legend = tm_legend(title = "GDP Per Capita"))
 ```
 
 To return to regular plotting mode, simply reset `tmap_mode`.
@@ -513,7 +527,10 @@ To return to regular plotting mode, simply reset `tmap_mode`.
 Maps can be stored as objects for for adding additional layers and saving programmatically. Maps can be saved directly in `tmap` using the `tm_save()` function. 
 
 ```{r}
-
+map1 <- tm_shape(world_vector) +
+  tm_polygons(fill = "gdp_per_cap", 
+              fill.legend = tm_legend(title = "GDP Per Capita"))
+tmap_save(map1, here::here("week1", "tmap_example.png"))
 
 ```
 
