--- a/week1/week1-discussion.qmd
+++ b/week1/week1-discussion.qmd
@@ -48,15 +48,46 @@ tmap_mode(mode = "view")
 tm_shape(ei_borders) +
   tm_borders(col = "blue") +
   tm_shape(ei_elev) +
-  tm_raster(col.scale = tm_scale(values = "parks.arches", col.legend = tm_legend("Elevation (m)"))) +
+  tm_raster(col.scale = tm_scale(values = "parks.arches", fill.legend = tm_legend(title = "Elevation (m)"))) +
   tm_shape(ei_roads) +
   tm_lines() +
   tm_shape(ei_points) +
   tm_symbols(shape = "type",
              shapes = c("volcano" = 24, "cave_entrance" = 14, "peak" = 16),
-             size = 0.5) 
-  
-  
-  
+             size = 0.5) +
+  tm_layout()
+```
+```{r}
+# In ggplot
+# extract lat & long from geom column 
+volcanoes_point <- ei_points %>%
+  mutate(lon = unlist(map(ei_points$geom,1)), # longitude = first component (x)
+         lat = unlist(map(ei_points$geom,2))) # latitude = second component (y)
+```
+
+```{r}
+ggplot() +
+  # first add Easter Isand borders
+  geom_sf(data = ei_borders, color = "#212529") +
+  # add elevation raster
+  geom_stars(data = ei_elev) +
+  scale_fill_distiller(name = "Elevation (m asl)", # legend title with units
+                       palette = "RdYlGn",         # red-yellow-green palette (no need to reverse)
+                       na.value = "lightblue") +  # set NA color (background ocean)
+  # add road vector
+  geom_sf(data = ei_roads, color = "#343a40") +
+  # add volcano vector
+  geom_point(data = volcanoes_point, 
+             aes(x = lon, y = lat, 
+                 size = elevation), # point size depends on attribute value
+             shape = 17,            # triangle
+             color = "#22577a") +
+  scale_size_continuous(name = "Volcanoes (m asl)") +       # legend title with units
+  ggspatial::annotation_north_arrow(location = "br",        # bottom right
+                                    which_north = "true") + # point to north pole
+  ggspatial::annotation_scale(location = "bl",              # bottom left
+                              width_hint = 0.5) +           # proportion of map area the scalebar should occupy
+  labs(title = "Easter Island") +
+  theme_minimal()
 ```
 
