--- a/week8/week8.qmd
+++ b/week8/week8.qmd
@@ -395,6 +395,20 @@ landsat_df %>%
 arrange(cluster) %>% 
   knitr::kable(digits = 2, caption = "mean spectral values by cluster")
 
+# High NIR low red: 3
+# Higher blue and low NIR: 4
+# Higher values across all: 1
+# Moderate values: 2
+
+# Set category labels
+levels(sb_classification_kmeans) <- data.frame(
+  ID = 1:4, 
+  landcover = c("soil/dead grass", 
+                "urban", 
+                "green vegetation", 
+                "water")
+)
+
 ```
 
 ## 5. Plot Results 
@@ -402,7 +416,17 @@ arrange(cluster) %>%
 Now we can plot the results and check out our land cover map!
 
 ```{r}
+kmeans_plot <- tm_shape(sb_classification_kmeans) +
+  tm_raster(
+    col.scale = tm_scale(
+      values = c("#F2DDA4", "#7E8987", "#8DB580", "#6A8EAE"), 
+      labels = c("soil/dead grass", "urban","green vegetation", "water")), 
+      col.legend = tm_legend("Landcover Type")
+    ) +
+  tm_title(text = "K-means Landcover Classification") +
+  tm_layout(legend.position = c("left", "bottom"))
 
+kmeans_plot
 ```
 
 ## 6. Compare our decision tree and kmeans algorithm classification
@@ -411,6 +435,6 @@ Now let's compare our two approaches side-by-side! The decision tree used labele
 
 
 ```{r}
-
+tmap_arrange(dt_plot, kmeans_plot, nrow=1)
 ```
 
